; (env
;  (_
;   (flags
;    (:standard -warn-error +5))))

(library
 (name semantic_interpreter)
 (modules semantic_interpreter)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx
   GT.ppx_all
   ppx_expect
   ppx_inline_test)))

(library
 (name relational_semantic_interpreter)
 (modules relational_semantic_interpreter)
 (flags
  ; (-dsource)
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 (preprocessor_deps ./pp5+gt+plugins+ocanren+dump.exe)
 ; (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_deriving_reify
   OCanren-ppx.ppx_fresh
   ppx_expect
   ppx_inline_test
   GT.ppx
   GT.ppx_all
   OCanren-ppx.ppx_distrib
   --
   -pp
   lib/pp5+gt+plugins+ocanren+dump.exe)))

(library
 (name relational_semantic_interpreter_oc)
 (modules relational_semantic_interpreter_oc)
 (flags
  ; (-dsource)
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 (preprocessor_deps ./pp5+gt+plugins+ocanren+dump.exe)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_deriving_reify
   OCanren-ppx.ppx_fresh
   ppx_expect
   ppx_inline_test
   GT.ppx
   GT.ppx_all
   OCanren-ppx.ppx_distrib
   --
   -pp
   lib/pp5+gt+plugins+ocanren+dump.exe)))

; (library
;  (name test)
;  (modules test)
;  (flags
;   (-dsource)
;   (:standard -rectypes))
;  (libraries OCanren OCanren.tester)
;  (preprocessor_deps ./pp5+gt+plugins+ocanren+dump.exe)
;  (wrapped false)
;  (preprocess
;   (pps
;    ppx_expect
;    ppx_inline_test
;    GT.ppx
;    GT.ppx_all
;    OCanren-ppx.ppx_repr
;    OCanren-ppx.ppx_deriving_reify
;    OCanren-ppx.ppx_fresh
;    OCanren-ppx.ppx_distrib
;    --
;    -pp
;    lib/pp5+gt+plugins+ocanren+dump.exe)))

(rule
 (targets pp5+gt+plugins+ocanren+dump.exe)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,logger.syntax
   -package
   logger.syntax,GT.syntax,GT.syntax.all,OCanren.syntax
   -o
   %{targets})))
